--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 		"noImplicitAny": true,
 		"outDir": "dist",
 		"removeComments": false,
+		"sourceMap": true,
 		"target": "es5"
 	},
 	"files": [
